<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/DiariesList_Linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListDiaries.DiariesList">

    <android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/Diaries_list_imageButton"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:text="@string/listLabel"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/Diaries_list_imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="#0AFFFFFF"
            android:contentDescription="@string/searchDate"
            app:srcCompat="@drawable/ic_magnify_black_48dp" />


    </RelativeLayout>

</android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/Diaries_list_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/searchNoResult"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Diaries_list_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>